pod-error-monitor/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pod-error-monitor
  labels:
    name: pod-error-monitor
    app: pod-error-monitor
